# price_hub

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  vercel.json
.github/workflows/: ci.yml  fetch-prices.yml
api/: index.py  requirements.txt
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  counter.ts  index.css  main.ts
client/src/api/: client.ts
client/src/components/: GlassPanel.tsx  Layout.tsx  PageHeader.tsx  PriceCard.tsx  PriceTable.tsx  SubscribeButton.tsx  TrendChart.tsx
client/src/hooks/: useSubscriptions.ts
client/src/pages/: CatalogPage.tsx  DetailPage.tsx  HomePage.tsx  ProfilePage.tsx
client/src/types/: index.ts
client/src/utils/: format.ts
docs/: architecture.md  data-sources.md  deployment.md
server/: .env.example  Dockerfile  alembic.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py
server/app/: bootstrap.py  config.py  database.py  main.py  price_sync.py  seed.py  seed_data.py
server/app/api/: internal.py  routes.py
server/app/fetchers/: __init__.py  base.py  basket.py  commodity.py  forex.py  fred_util.py  gold.py  market.py  oil.py  sina_util.py  spot_util.py
server/app/models/: __init__.py  price.py
server/app/schemas/: __init__.py  price.py
server/app/services/: __init__.py  fetcher_manager.py  price_service.py
server/scripts/: probe_fallbacks.py  probe_more.py  probe_sources.py
server/tests/: test_fred_util.py  test_oil_market.py
