[project]
name = "price-hub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "sqlalchemy==2.0.36",
  "alembic==1.14.0",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "python-dotenv==1.0.1",
  "httpx==0.28.1",
  "akshare>=1.16.72",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "fredapi==0.5.2",
]

[tool.vercel]
entrypoint = "api.index:app"
